aligns links to center and changes body position to fixed

--- a/src/components/BackgroundImage/BackgroundImage.css
+++ b/src/components/BackgroundImage/BackgroundImage.css
@@ -1,7 +1,11 @@
 .BackgroundImage {
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  width: 100vw;
-  height: 100vh;
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	width: 100vw;
+	height: 100vh;
+}
+
+body {
+	position: fixed;
 }
