--- a/src/components/Links/Links.css
+++ b/src/components/Links/Links.css
@@ -1,4 +1,3 @@
 .links {
-  padding-top: 50px;
-  margin-left: -40px;
+	padding: 1rem;
 }
